<resources>
    <string name="app_name">CrowdTest</string>
    <string name="username"><b><u>USERNAME</u></b></string>
    <string name="user_profile"><b>My Profile</b></string>
    <string name="contact_info"><b><u>CONTACT INFO</u></b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_experiments">SearchExperimentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date_published">Date published:</string>
    <string name="end_experiment">End Experiment</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="value">Value</string>
    <string name="add_value">Change value (default 1)</string>
    <string name="participants">Participants</string>
    <string name="add_count">Add Count:</string>
    <string name="qrgenerate">Generate QR</string>
    <string name="success">Success:</string>
    <string name="failure">Failure:</string>
    <string name="change">Change</string>
    <string name="post">Post</string>
    <string name="reply">Reply</string>
    <string name="comment">comment</string>
    <string name="question">Question</string>
</resources>